# Epub-to-ankideck

./: .gitignore  CLAUDE.md  README.md  claude_code_workflow.py  pyproject.toml
docs/: STYLE_GUIDE.md
src/epub_to_anki/: __init__.py  agent.py  checkpoint.py  cli.py  cost_estimator.py  deduplicator.py  models.py
src/epub_to_anki/exporter/: __init__.py  anki_exporter.py
src/epub_to_anki/generator/: __init__.py  card_generator.py  prompts.py
src/epub_to_anki/parser/: __init__.py  epub_parser.py
src/epub_to_anki/ranker/: __init__.py  card_ranker.py
tests/: __init__.py  test_anki_exporter.py  test_card_versioning.py  test_checkpoint.py  test_cost_estimator.py  test_deduplicator.py  test_models.py  test_ranker.py
