[project]
name = "epub-to-ankideck"
version = "0.1.0"
description = "Generate high-quality Anki flashcard decks from EPUB books using Claude"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "ebooklib>=0.18",
    "genanki>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
epub2anki = "epub_to_anki.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epub_to_anki"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
# Allow long lines in files with CSS/template strings
"src/epub_to_anki/models.py" = ["E501"]
"src/epub_to_anki/generator/prompts.py" = ["E501"]
"src/epub_to_anki/exporter/anki_exporter.py" = ["E501"]
