[project]
name = "epub-to-anki"
version = "0.3.0"
description = "Create Anki flashcards from EPUB books using Claude Code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ebooklib>=0.18",
    "genanki>=0.13.0",
    "beautifulsoup4>=4.12.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/epub_to_anki"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/epub_to_anki/models.py" = ["E501"]
"src/epub_to_anki/exporter/anki_exporter.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
